# Rustacos

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
crates/adapters-notify-sse/: Cargo.toml
crates/adapters-notify-sse/src/: lib.rs
crates/adapters-storage-memory/: Cargo.toml
crates/adapters-storage-memory/src/: lib.rs
crates/api-compat-nacos/: Cargo.toml
crates/api-compat-nacos/src/: lib.rs
crates/app-bootstrap/: Cargo.toml
crates/app-bootstrap/src/: lib.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/core-ports/: Cargo.toml
crates/core-ports/src/: lib.rs
crates/core-usecase/: Cargo.toml
crates/core-usecase/src/: config.rs  lib.rs
src/: lib.rs  main.rs
src/frontend/: app.rs  components.rs  main.rs  mod.rs  services.rs
src/frontend/pages/: configs.rs  dashboard.rs  mod.rs  namespaces.rs  services.rs
static/: app.js  bootstrap-icons.css  configs.html  debug.html  editor.js  frontend-d8edfd1166cfa824.js  frontend-d8edfd1166cfa824_bg.wasm  index.html  namespaces.html  services.html  simple.html  test-icons-inline.html  test-icons.html  test-simple.html  test.html
