[package]
name = "adapters-notify-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
core-model = { path = "../core-model" }
core-ports = { path = "../core-ports" }
async-trait = "0.1"
async-stream = "0.3"

