[package]
name = "app-bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
api-compat-nacos = { path = "../api-compat-nacos" }
adapters-storage-memory = { path = "../adapters-storage-memory" }
core-ports = { path = "../core-ports" }
core-model = { path = "../core-model" }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net"] }
chrono = "0.4"

